--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="<%= BASE_URL %>css/reset.css">
+    <!-- <link rel="stylesheet" href="<%= BASE_URL %>pace/pace-theme-barber-shop.css"> -->
+    <link rel="stylesheet" href="<%= BASE_URL %>pace/center-atom.css">
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
@@ -17,6 +19,7 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script src="pace/pace.min.js"></script>
     <!-- built files will be auto injected -->
 </body>
 
