--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="<%= BASE_URL %>css/reset.css">
     <!-- <link rel="stylesheet" href="<%= BASE_URL %>pace/pace-theme-barber-shop.css"> -->
     <link rel="stylesheet" href="<%= BASE_URL %>pace/center-atom.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_3177189_x6ig4ozx7z.css">
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
@@ -16,7 +17,8 @@
 
 <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+        <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+                Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <script src="pace/pace.min.js"></script>
